@@ -1487,5 +1487,14 @@ echo test
 	correct way.
 	
 	- Fixed libcu8_dup() functions to handle standard input the right way.
+
+{{Friday 17th, February}}
+
+	- Fixed libcu8 so that libcu8 ignores invalid utf-8 bytes sequences, instead of
+	returning errors.
+	
+	- Fixed the FOR function freeing function.
+	
+	- Fixed some manual pages.
 	
 	
