@@ -47,7 +47,7 @@ ${FOR %%A IN (chaine) DO (
 		- {%%A} : Le nom de la {spec/xvar|variable spéciale} qui va recevoir
 		l'élément sur lequel exécuter les commandes.
 
-		@- Le logiciel privateur {cmd.exe} forçait les utilisateurs à utiliser deux
+		@- Le logiciel propiétaire {cmd.exe} forçait les utilisateurs à utiliser deux
 		différentes syntaxes, en fonction du mode d'entrée de la commande
 		(console ou batch). Dans le premier cas, l'utilsateur devait
 		utiliser {%A} à la place de {%%A}, qui devait être utilisée
@@ -189,7 +189,7 @@ ${FOR /F [options] %%A IN (objet) DO (
 
 			@-- Le premier élément est désigné par le nombre {1}. Notez,
 			que contrairement au logiciel propriétaire {cmd.exe}, l'ordre des
-			opération n'est pas importante pour {Dos9} (Voir section {Compatibilité}}.
+			opération n'est pas importante pour {Dos9} (Voir section {Compatibilité}).
 
 			-- {delims} : spécifie les caractères à utiliser comme délimiteurs pour découper l'entrée
 			obtenue avec {objet} en éléments. Par défaut, le seul délimiteur
